--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,14 +2,31 @@
 name = "veri-rust-crypto"
 version = "0.1.0"
 edition = "2024"
+authors = ["Daniel"]
+description = "A modular, formally verified cryptographic crate built on Keccak-f[1600]"
+license = "GPL-3.0"
+repository = "https://github.com/danieldia-dev/veri-crypto"
+keywords = ["cryptography", "sha3", "keccak", "formal-verification", "hax"]
 
 [dependencies]
-# The hax library, required for all the macros
-# See: hax-lib-api.md
-hax-lib = { version = "*" }
+# For future use with hax formal verification
+# hax-lib = { version = "0.1.0", optional = true }
 
-[package.metadata.hax]
-# Configures the `cargo hax into fstar` command
-# See: cli-backends.md
-into.fstar.output_dir = "proofs/fstar/extraction"
-into.fstar.z3rlimit = 100
+[dev-dependencies]
+hex = "0.4"
+
+[features]
+# Feature flag for hax verification annotations
+# hax = ["hax-lib"]
+
+[lib]
+name = "veri_rust_crypto"
+path = "lib.rs"
+
+[[example]]
+name = "sha3_example"
+path = "examples/sha3_example.rs"
+
+[[example]]
+name = "kdf_example"
+path = "examples/kdf_example.rs"
