fixes to debug hax into fstar

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ hex = "0.4"
 
 [lib]
 name = "veri_rust_crypto"
-path = "lib.rs"
+path = "src/lib.rs"
 
 [[example]]
 name = "sha3_example"
@@ -30,3 +30,6 @@ path = "examples/sha3_example.rs"
 [[example]]
 name = "kdf_example"
 path = "examples/kdf_example.rs"
+
+[target."cfg(hax)".dependencies]
+hax-lib = { git = "https://github.com/hacspec/hax", version = "0.3.5" }
